# presage

./: .gitattributes  .gitignore  71  CHANGELOG.md  Cargo.toml  README.md  TODO.md  crates.js  help.html  justfile  presage.sqlite  rustfmt.toml  search-index.js  settings.html  source-files.js  src-files.js
presage/: Cargo.toml  all.html  enum.Error.html  enum.MigrationConflictStrategy.html  enum.ReceivingMode.html  enum.Thread.html  index.html  sidebar-items.js  struct.Confirmation.html  struct.ContentProto.html  struct.Linking.html  struct.Manager.html  struct.New.html  struct.Registered.html  struct.Registration.html  struct.RegistrationOptions.html  struct.SecretVolatileConfigStore.html  struct.SecretVolatileStore.html  struct.SledConfigStore.html  struct.SledStore.html  struct.VolatileConfigStore.html  struct.VolatileStore.html  trait.ConfigStore.html  trait.ContactsStore.html  trait.ContentTimestamp.html  trait.GroupsStore.html  trait.MessageStore.html  trait.ProfilesStore.html  trait.StateStore.html  trait.Store.html  trait.StoreError.html  type.AvatarBytes.html  type.GroupMasterKeyBytes.html
presage-cli/: Cargo.toml
presage-cli/src/: main.rs
presage-store-cipher/: Cargo.toml
presage-store-cipher/src/: lib.rs
presage-store-sled/: Cargo.toml  build.rs
presage-store-sled/src/: content.rs  error.rs  lib.rs  protobuf.rs  protocol.rs
presage-store-sqlite/: .env  .gitignore  Cargo.toml  README.md  diesel.toml  presage.sqlite  test.sqlite
presage-store-sqlite/.cargo/: config.toml
presage-store-sqlite/.sqlx/: query-025901b7e44696ee3b3e92583d269b036cbc24104720ed49571f7b25df39420b.json  query-02dacd272b081cb93daacfd9fc0c8480806af402afaa06c5556b55d2aa0695c7.json  query-063159b2ecf475363254eaffd8c3286b4354a2f05a1eb418678ffc3050e09e86.json  query-068728e31158d57c330eafc0e3604470b6a61278a8edc257b324ecf8e20e8af2.json  query-113b7ed248bfc820dc2a9a90354c07b339ad028dcfad92c928dd381d891e3ad0.json  query-11a6b9df71ebff7347e15979dd801338bc61cdcc34a4cc78279c284711ab1028.json  query-14a77634b0af69062c8cc9872304b0f0f67e7d2bff863aaf15acbd679537dee5.json  query-15a7004e49da052f9be07e473eff98a3f663a822ae69a4ad00114ab31f1596e2.json  query-160eefd09832d1c6a5feb0e54994d71fdae7220d39312e18be7ebb8335384714.json  query-16dd565987c37fc48f734ebe0d06151cead304e35b7b0fb01ee0fb65a4102fa4.json  query-1b116b1419c2b61eb2b50c16b584a7f6a0f387be690a380a276a109daf2a726d.json  query-21238545aba782562f8c1ebf61b6e0292eb9baa57ba51d3ca9798573a2c8697e.json  query-22a6170a4e33163a53257befd2466a7278e5ca2b9debf11a0e0d8f20c7fffeb4.json  query-261e68e9014907ffe1981465782541ca9a896f85dabaad6e76d67402cbc82b68.json  query-2d5393ae20e3136068275a079c7d71d04417f044029da8e8d9a0d735d91a9da8.json  query-3170476b06e6c0c48a054f1ff503e7eb24ba5eb8dba63ddac41154edf3badf69.json  query-322b544426ee05505d5346fbb1fa58d061aa0c06e9244991893472aa98eac3c3.json  query-3a0ea4bcd1be0c9f302463487473eeef7d5c19d2e373a31ed56ea853ed57690e.json  query-3bc26672839257680903803812b482a82f00197519fd9b4b6aceeb6a0850ccfd.json  query-3f0c9014637ae043b35c2161581e7dee7d46c779b35ad06e7b2cb2efc63e72c0.json  query-428137122cb5864a94706098fee60844633dd8d1619d0291b6d96401b2b94e10.json  query-48700c9970ec802e942a0c25d231696250d675b95c2e64bae9c4ca2593de1ff4.json  query-4badd80f14674b5a934f27a57f165ac044095b75544bb7f979ad4a631ee62f00.json  query-4fa3dbd779a06f9ab22934a8176c372bf2cf6fe9fd60bec68f1ecec0206eacb2.json  query-55deb2155c89853ac179f0cf85b181f12233ad20a6af32514c25fcd646b7ff19.json  query-58405418d4f7263ed57a611daf81f667982d30aac1059cdd223bd7bbcb3c5f5b.json  query-59b1b15953ac19fc20df9ea14b694f452ae3f979df614d9359d12a423a2c0c63.json  query-5bc0a6578cc589b5f02a97c6441b85858b02d9cb67007d8e4a5accc88d8005ea.json  query-62c99b81d0ba8bdeea0a23176769014e7ffc8a9510ca9bcbcf38ea4e7ec99142.json  query-639fbd073012246a7884f5950b990f956c477d4317643f85fc09002104e9cb95.json  query-6596b08f27ca4a47ed041e593a9c8a1621abb0336cf79a714a80904c6a85c7ed.json  query-67999ceeb5578a62a2f4d03cb202437dda869071494ae0674e8971482ae3e8d1.json  query-7128232c28b11f858a82817a667e1c70cc014212551d35b4a53773d4067502e6.json  query-759758c0c79377c3004e2b04ecca0e292524dc7965bab1eea79bd714134eba59.json  query-7a58899603d533e8448b066c598e2e2c5bd899ba44641afc0aa4f9cccd599a4a.json  query-7aeef727c93b2648119f0c3bea2b31a1087cba3a18bb4fcec6d547a86bb07364.json  query-7b021156864bb30c24b8bc4ed0f1a0eb67f59b09b0132a9e156b31154f8787e6.json  query-7d020ddc267ffdc2ae06427a1ce2aff08c98828abf87c5856e5a370eb2eadca7.json  query-81e198ecaaef60cebd001f064da12d40cf10cc54afc9ea8d267b2ed1be78f9e2.json  query-83fc781fcfd1d72c1fb16c61ea382f1730727cf9fd8d68102d4030d9958e722f.json  (+47 more)
presage-store-sqlite/migrations/: 20241024072558_Initial_data_model.sql  20250112201436_init.sql  20250731181329_remove_contacts_deprecated_fields.sql  20251019115300_add_base_keys_seen.sql  20260119182700_remove_device_id_from_identities.sql  20260414192700_add_disappearing_messages_timer_for_groups.sql
presage-store-sqlite/src/: content.rs  data.rs  error.rs  imp.rs  lib.rs  orm.rs  protocol.rs  schema.rs
presage/config/: enum.Thread.html  trait.ConfigStore.html  trait.ContactsStore.html  trait.MessageStore.html
presage/errors/: enum.Error.html
presage/manager/: enum.ReceivingMode.html  enum.RegistrationType.html  index.html  sidebar-items.js  struct.Confirmation.html  struct.Linking.html  struct.Manager.html  struct.New.html  struct.Registered.html  struct.Registration.html  struct.RegistrationData.html  struct.RegistrationOptions.html
presage/model/: enum.ServiceIdType.html  index.html  sidebar-items.js
presage/prelude/: enum.ContentBody.html  enum.GroupChange.html  enum.GroupType.html  enum.ParseServiceAddressError.html  enum.SignalServers.html  index.html  sidebar-items.js  struct.AccessControl.html  struct.AttachmentSpec.html  struct.Contact.html  struct.Content.html  struct.DataMessage.html  struct.Group.html  struct.GroupContext.html  struct.GroupContextV2.html  struct.GroupMasterKey.html  struct.GroupSecretParams.html  struct.Metadata.html  struct.PendingMember.html  struct.PhoneNumber.html  struct.RequestingMember.html  (+4 more)
(+9658 files in other folders)
