[package]
name = "presage-cli"
version = "0.6.0-dev"
edition = "2021"
authors = ["Gabriel Féron <g@leirbag.net>"]
license = "AGPL-3.0-only"

[dependencies]
presage = { path = "../presage" }
presage-store-sled = { path = "../presage-store-sled" }

anyhow = { version = "1.0", features = ["backtrace"] }
base64 = "0.21"
chrono = { version = "0.4", default-features = false, features = ["serde", "clock"] }
clap = { version = ">=4.2.4", features = ["derive"] }
directories = "3.0"
env_logger = "0.7"
futures = "0.3"
hex = "0.4"
log = "0.4"
mime_guess = "2.0"
tempfile = "3.9"
tokio = { version = "1.35", features = ["macros", "rt-multi-thread", "io-std", "io-util"] }
qr2term = { version = "0.2.3" }
notify-rust = "4.10.0"
url = "2.5"
