[package]
name = "presage-store-sled"
version = "0.6.0-dev"
edition = "2021"
authors = ["Gabriel Féron <g@leirbag.net>"]
license = "AGPL-3.0-only"

[build-dependencies]
prost-build = "> 0.10, <= 0.12"

[dependencies]
presage = { path = "../presage" }
presage-store-cipher = { path = "../presage-store-cipher", optional = true }

async-trait = "0.1"
base64 = "0.21"
fs_extra = "1.3"
log = "0.4.20"
sled = { version = "0.34" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
prost = "> 0.10, <= 0.12"
sha2 = "0.10"
quickcheck_macros = "1.0.0"
chrono = "0.4.35"

[dev-dependencies]
anyhow = "1.0"
futures = "0.3"
quickcheck = "1.0.3"
quickcheck_async = "0.1"
rand = "0.8"
tokio = { version = "1.35", default-features = false, features = ["time"] }

[features]
default = ["encryption"]
encryption = ["dep:presage-store-cipher"]
