[package]
name = "presage-store-sqlite"
version = "0.8.0-dev"
edition = "2024"
license = "AGPL-3.0-only"

[dependencies]
presage = { path = "../presage" }

async-trait = "0.1.83"
bytes = "1.9.0"
chrono = "0.4.38"
prost = "0.13.4"
serde_json = "1.0.135"
sqlx = { version = "0.8.2", features = ["json", "sqlite", "uuid"] }
thiserror = "2.0.0"
tracing = "0.1.41"
uuid = "1.12.0"

# Explicitly use the libsqlite3-sys crate with the bundled-sqlcipher feature. Make dependency optional, so the user can opt out in case of dependency conflict.
libsqlite3-sys = { version = "0.30", features = ["bundled-sqlcipher"], optional = true }

[dev-dependencies]
tokio = { version = "1.48.0", features = ["rt", "macros"] }
rand = "0.9"

[features]
default = ["runtime-tokio", "bundled"]
runtime-tokio = ["sqlx/runtime-tokio"]
runtime-async-std = ["sqlx/runtime-async-std"]
bundled = ["dep:libsqlite3-sys"]
