[package]
name = "presage-store-sqlite"
version = "0.8.0-dev"
edition = "2024"
license = "AGPL-3.0-only"

[features]
default = ["cdsi"]
cdsi = ["presage/cdsi"]

[dependencies]
presage = { path = "../presage", default-features = false }

async-trait = "0.1.83"
bytes = "1.9.0"
chrono = "0.4.38"
prost = "0.13.4"
serde_json = "1.0.135"
# v0.8.6 with one unreleased patch to relax the version requirement for libsqlite3-sys
sqlx = { version = "0.8.6", git = "https://github.com/gferon/sqlx", rev = "53c3a26c1b484175f3beb21853a1061b488bf7af", features = ["json", "sqlite", "uuid", "runtime-tokio"] }
thiserror = "2.0.0"
tracing = "0.1.41"
uuid = "1.12.0"

# Explicitly use the libsqlite3-sys crate with the bundled-sqlcipher feature
libsqlite3-sys = { version = "0.36.0", features = ["bundled-sqlcipher-custom-crypto"] }

[dev-dependencies]
tokio = { version = "1.48.0", features = ["rt", "macros"] }
rand = "0.9"
