[package]
# be a sign or warning of (an imminent event, typically an unwelcome one).
name = "presage"
version = "0.7.0-dev"
authors = ["Gabriel Féron <g@leirbag.net>"]
edition = "2021"
license = "AGPL-3.0-only"

[dependencies]
libsignal-service = { git = "https://github.com/whisperfish/libsignal-service-rs", rev = "4edc3c7" }

base64 = "0.22"
futures = "0.3"
hex = "0.4.3"
rand = "0.9"
serde = "1.0"
serde_json = "1.0"
sha2 = "0.10.8"
thiserror = "1.0"
tokio = { version = "1.43", default-features = false, features = [
    "rt",
    "sync",
    "time",
] }
tracing = "0.1"
url = "2.5"
serde_with = "3.11.0"
derivative = "2.2.0"
bytes = { version = "1.7.2", features = ["serde"] }

[dev-dependencies]
quickcheck = "1.0.3"
quickcheck_async = "0.1"
presage-store-sled = { path = "../presage-store-sled" }
