[package]
# be a sign or warning of (an imminent event, typically an unwelcome one).
name = "presage"
version = "0.8.0-dev"
authors = ["Gabriel Féron <g@leirbag.net>"]
edition = "2021"
license = "AGPL-3.0-only"

[dependencies]
libsignal-service = { git = "https://github.com/whisperfish/libsignal-service-rs", rev = "b48b42fbce755035fafafc3b28d5b23844763e49" }

base64 = "0.22"
futures = "0.3"
hex = "0.4.3"
rand = "0.9"
serde = "1.0"
serde_json = "1.0"
sha2 = "0.10.8"
thiserror = "1.0"
tokio = { version = "1.48", default-features = false, features = [
    "rt",
    "sync",
    "time",
] }
tracing = "0.1"
url = "2.5"
derive_more = { version = "2.1.0", features = ["debug"] }
bytes = { version = "1.7.2", features = ["serde"] }

[dev-dependencies]
quickcheck = "1.0.3"
quickcheck_async = "0.1"
presage-store-sqlite = { path = "../presage-store-sqlite" }
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros"] }
